# Portfolio_Investing_LR

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  example_config.yaml  example_hk_config.yaml  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-portfolio-agent.yml  deploy-github-pages.yml  refresh-web-snapshot-local-llm.yml  refresh-web-snapshot.yml  weekly-historical-validation.yml
docs/: investment_rules_research.md  local_llm_deployment.md  netlify_credit_budget.md  portfolio_optimization_and_validation.md  public_private_split.md  research_sources_integration.md  strategy_principles_cn.md  windows_nvidia_local_llm_setup.md
scripts/: bootstrap.sh  check_local_llm.py  export_historical_validation.py  export_web_snapshot.py  run_daily.sh  setup_daily_launchd.sh
src/portfolio_agent/: __init__.py  academic_factors.py  api.py  backtest.py  cli.py  config.py  data.py  engine.py  execution.py  historical_validation.py  indicators.py  information_signs.py  market_screener.py  ml.py  models.py  notifier.py  optimization.py  point_in_time.py  portfolio.py  report.py  research_digest.py  rules_catalog.py  sandbox.py  sec_fundamentals.py  selftest.py  (+5 more)
tests/: test_backtest.py  test_information_signs.py  test_market_screener.py  test_ml_and_execution.py  test_optimization_and_validation.py  test_portfolio_rules.py  test_report_and_config.py  test_research_digest.py  test_sec_fundamentals.py  test_sentiment.py  test_strategies_and_engine.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
(+38 files in other folders)
